// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DictPropertySelect should not render anything while hidden 1`] = `
<DictPropertySelect
  current={
    Object {
      "description": "This shows _%(type)s_ content",
      "type": "old",
    }
  }
  dict={
    Object {
      "type": "new",
    }
  }
  hidden={true}
  onChange={[Function]}
  path="some.path"
  type="dict"
  uuid="mocked-uuid-1"
/>
`;

exports[`Component: DictPropertySelect should render the updated description 1`] = `
<DictPropertySelect
  current={
    Object {
      "description": "This shows _%(type)s_ content",
      "type": "old",
    }
  }
  dict={
    Object {
      "type": "new",
    }
  }
  onChange={[Function]}
  path="some.path"
  type="dict"
  uuid="mocked-uuid-1"
>
  <MDReactComponent
    text="This shows _new_ content"
  >
    <span
      key="mdrct-html-0"
    >
      <p
        key="mdrct-p-0"
      >
        This shows 
        <em
          key="mdrct-em-1"
        >
          new
        </em>
         content
      </p>
    </span>
  </MDReactComponent>
</DictPropertySelect>
`;
